# test-CI

./: .gitignore  CMakeLists.txt  README.md  demo.cpp
.github/workflows/: base.yml
include/: calculator.hpp
src/: calculator.cpp
test/: calculator_test.cpp
